// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTour general rendering of first slide should render correctly with 1 slide and minimal prop 1`] = `
<ProductTour
  ariaHideApp={false}
  finishLabel="Finish"
  isOpen={true}
  onFinished={[MockFunction]}
>
  <Modal
    ariaHideApp={false}
    className="ProductTour"
    isOpen={true}
    isPositionFixed={true}
    onRequestClose={[Function]}
  >
    <Modal
      ariaHideApp={false}
      bodyOpenClassName="Modal__body"
      className={
        Object {
          "afterOpen": "Modal__content--entered",
          "base": "Modal__content Modal__content--isPositionFixed ProductTour",
          "beforeClose": "Modal__content--exited",
        }
      }
      closeTimeoutMS={300}
      isOpen={true}
      onAfterOpen={[Function]}
      onRequestClose={[Function]}
      overlayClassName={
        Object {
          "afterOpen": "Modal__overlay--entered",
          "base": "Modal__overlay",
          "beforeClose": "Modal__overlay--exited",
        }
      }
      overlayRef={[Function]}
      parentSelector={[Function]}
      portalClassName="ReactModalPortal"
      role="dialog"
      shouldCloseOnEsc={true}
      shouldCloseOnOverlayClick={true}
      shouldFocusAfterRender={true}
      shouldReturnFocusAfterClose={true}
    >
      <Portal
        containerInfo={
          <div
            class="ReactModalPortal"
          >
            <div
              class="Modal__overlay Modal__overlay--entered"
            >
              <div
                class="Modal__content Modal__content--isPositionFixed ProductTour Modal__content--entered"
                role="dialog"
                tabindex="-1"
              >
                <section
                  class="ProductTour__slide"
                >
                  <div>
                    My single slide
                  </div>
                </section>
                <div
                  class="ProductTour__footer"
                >
                  <div
                    class="ProductTour__checkbox"
                  />
                  <div
                    class="ProductTour__buttons"
                  >
                    <button
                      class="Button Button--isPrimary"
                      type="button"
                    >
                      Finish
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        }
      >
        <ModalPortal
          ariaHideApp={false}
          bodyOpenClassName="Modal__body"
          className={
            Object {
              "afterOpen": "Modal__content--entered",
              "base": "Modal__content Modal__content--isPositionFixed ProductTour",
              "beforeClose": "Modal__content--exited",
            }
          }
          closeTimeoutMS={300}
          defaultStyles={
            Object {
              "content": Object {
                "WebkitOverflowScrolling": "touch",
                "background": "#fff",
                "border": "1px solid #ccc",
                "borderRadius": "4px",
                "bottom": "40px",
                "left": "40px",
                "outline": "none",
                "overflow": "auto",
                "padding": "20px",
                "position": "absolute",
                "right": "40px",
                "top": "40px",
              },
              "overlay": Object {
                "backgroundColor": "rgba(255, 255, 255, 0.75)",
                "bottom": 0,
                "left": 0,
                "position": "fixed",
                "right": 0,
                "top": 0,
              },
            }
          }
          isOpen={true}
          onAfterOpen={[Function]}
          onRequestClose={[Function]}
          overlayClassName={
            Object {
              "afterOpen": "Modal__overlay--entered",
              "base": "Modal__overlay",
              "beforeClose": "Modal__overlay--exited",
            }
          }
          overlayRef={[Function]}
          parentSelector={[Function]}
          portalClassName="ReactModalPortal"
          role="dialog"
          shouldCloseOnEsc={true}
          shouldCloseOnOverlayClick={true}
          shouldFocusAfterRender={true}
          shouldReturnFocusAfterClose={true}
          style={
            Object {
              "content": Object {},
              "overlay": Object {},
            }
          }
        >
          <div
            className="Modal__overlay Modal__overlay--entered"
            onClick={[Function]}
            onMouseDown={[Function]}
            style={Object {}}
          >
            <div
              className="Modal__content Modal__content--isPositionFixed ProductTour Modal__content--entered"
              onClick={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              role="dialog"
              style={Object {}}
              tabIndex="-1"
            >
              <section
                className="ProductTour__slide"
              >
                <div>
                  My single slide
                </div>
              </section>
              <div
                className="ProductTour__footer"
              >
                <div
                  className="ProductTour__checkbox"
                />
                <div
                  className="ProductTour__buttons"
                >
                  <Button
                    isPrimary={true}
                    onClick={[Function]}
                  >
                    <button
                      className="Button Button--isPrimary"
                      disabled={false}
                      onClick={[Function]}
                      type="button"
                    >
                      Finish
                    </button>
                  </Button>
                </div>
              </div>
            </div>
          </div>
        </ModalPortal>
      </Portal>
    </Modal>
  </Modal>
</ProductTour>
`;

exports[`ProductTour general rendering of first slide should render correctly with multiple slides all props 1`] = `
<ProductTour
  ariaHideApp={false}
  cancelLabel="Cancel"
  checkboxLabel="Hide"
  continueLabel="Continue"
  finishLabel="Finish"
  isOpen={true}
  onCancel={[MockFunction]}
  onFinished={[MockFunction]}
>
  <Modal
    ariaHideApp={false}
    className="ProductTour"
    isOpen={true}
    isPositionFixed={true}
    onRequestClose={[Function]}
  >
    <Modal
      ariaHideApp={false}
      bodyOpenClassName="Modal__body"
      className={
        Object {
          "afterOpen": "Modal__content--entered",
          "base": "Modal__content Modal__content--isPositionFixed ProductTour",
          "beforeClose": "Modal__content--exited",
        }
      }
      closeTimeoutMS={300}
      isOpen={true}
      onAfterOpen={[Function]}
      onRequestClose={[Function]}
      overlayClassName={
        Object {
          "afterOpen": "Modal__overlay--entered",
          "base": "Modal__overlay",
          "beforeClose": "Modal__overlay--exited",
        }
      }
      overlayRef={[Function]}
      parentSelector={[Function]}
      portalClassName="ReactModalPortal"
      role="dialog"
      shouldCloseOnEsc={true}
      shouldCloseOnOverlayClick={true}
      shouldFocusAfterRender={true}
      shouldReturnFocusAfterClose={true}
    >
      <Portal
        containerInfo={
          <div
            class="ReactModalPortal"
          >
            <div
              class="Modal__overlay Modal__overlay--entered"
            >
              <div
                class="Modal__content Modal__content--isPositionFixed ProductTour Modal__content--entered"
                role="dialog"
                tabindex="-1"
              >
                <section
                  class="ProductTour__slide"
                >
                  <div>
                    <h1>
                      Slide 1
                    </h1>
                    <p>
                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                    </p>
                  </div>
                </section>
                <div
                  class="ProductTour__footer"
                >
                  <div
                    class="ProductTour__checkbox"
                  >
                    <div>
                      <input
                        class="Checkbox__input"
                        id="hide"
                        type="checkbox"
                      />
                      <label
                        class="Checkbox__label"
                        for="hide"
                      >
                        <span
                          class="Checkbox__box"
                        >
                          <svg
                            class="Checkbox__svg"
                            height="10px"
                            viewBox="0,0,10,10"
                            width="12px"
                          />
                        </span>
                        <span
                          class="Checkbox__text"
                        >
                          Hide
                        </span>
                      </label>
                    </div>
                  </div>
                  <div>
                    <div
                      class="ProductTour__dot ProductTour__dot--isActive"
                      role="button"
                    />
                    <div
                      class="ProductTour__dot"
                      role="button"
                      tabindex="0"
                    />
                    <div
                      class="ProductTour__dot"
                      role="button"
                      tabindex="0"
                    />
                    <div
                      class="ProductTour__dot"
                      role="button"
                      tabindex="0"
                    />
                  </div>
                  <div
                    class="ProductTour__buttons"
                  >
                    <button
                      class="Button Button--isLink ProductTour__skip"
                      type="button"
                    >
                      Cancel
                    </button>
                    <button
                      class="Button Button--isPrimary"
                      type="button"
                    >
                      Continue
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        }
      >
        <ModalPortal
          ariaHideApp={false}
          bodyOpenClassName="Modal__body"
          className={
            Object {
              "afterOpen": "Modal__content--entered",
              "base": "Modal__content Modal__content--isPositionFixed ProductTour",
              "beforeClose": "Modal__content--exited",
            }
          }
          closeTimeoutMS={300}
          defaultStyles={
            Object {
              "content": Object {
                "WebkitOverflowScrolling": "touch",
                "background": "#fff",
                "border": "1px solid #ccc",
                "borderRadius": "4px",
                "bottom": "40px",
                "left": "40px",
                "outline": "none",
                "overflow": "auto",
                "padding": "20px",
                "position": "absolute",
                "right": "40px",
                "top": "40px",
              },
              "overlay": Object {
                "backgroundColor": "rgba(255, 255, 255, 0.75)",
                "bottom": 0,
                "left": 0,
                "position": "fixed",
                "right": 0,
                "top": 0,
              },
            }
          }
          isOpen={true}
          onAfterOpen={[Function]}
          onRequestClose={[Function]}
          overlayClassName={
            Object {
              "afterOpen": "Modal__overlay--entered",
              "base": "Modal__overlay",
              "beforeClose": "Modal__overlay--exited",
            }
          }
          overlayRef={[Function]}
          parentSelector={[Function]}
          portalClassName="ReactModalPortal"
          role="dialog"
          shouldCloseOnEsc={true}
          shouldCloseOnOverlayClick={true}
          shouldFocusAfterRender={true}
          shouldReturnFocusAfterClose={true}
          style={
            Object {
              "content": Object {},
              "overlay": Object {},
            }
          }
        >
          <div
            className="Modal__overlay Modal__overlay--entered"
            onClick={[Function]}
            onMouseDown={[Function]}
            style={Object {}}
          >
            <div
              className="Modal__content Modal__content--isPositionFixed ProductTour Modal__content--entered"
              onClick={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              role="dialog"
              style={Object {}}
              tabIndex="-1"
            >
              <section
                className="ProductTour__slide"
              >
                <div
                  key="slide-1"
                >
                  <h1>
                    Slide 1
                  </h1>
                  <p>
                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                  </p>
                </div>
              </section>
              <div
                className="ProductTour__footer"
              >
                <div
                  className="ProductTour__checkbox"
                >
                  <Checkbox
                    checked={false}
                    id="hide"
                    onChange={[Function]}
                  >
                    <div>
                      <input
                        checked={false}
                        className="Checkbox__input"
                        disabled={false}
                        id="hide"
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <label
                        className="Checkbox__label"
                        htmlFor="hide"
                      >
                        <span
                          className="Checkbox__box"
                        >
                          <svg
                            className="Checkbox__svg"
                            height="10px"
                            viewBox={
                              Array [
                                0,
                                0,
                                10,
                                10,
                              ]
                            }
                            width="12px"
                          />
                        </span>
                        <Text
                          className="Checkbox__text"
                          context="default"
                          inline={true}
                        >
                          <span
                            className="Checkbox__text"
                          >
                            Hide
                          </span>
                        </Text>
                      </label>
                    </div>
                  </Checkbox>
                </div>
                <div>
                  <div
                    className="ProductTour__dot ProductTour__dot--isActive"
                    key="0"
                    role="button"
                  />
                  <div
                    className="ProductTour__dot"
                    key="1"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                    tabIndex={0}
                  />
                  <div
                    className="ProductTour__dot"
                    key="2"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                    tabIndex={0}
                  />
                  <div
                    className="ProductTour__dot"
                    key="3"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                    tabIndex={0}
                  />
                </div>
                <div
                  className="ProductTour__buttons"
                >
                  <Button
                    className="ProductTour__skip"
                    isLink={true}
                    onClick={[Function]}
                  >
                    <button
                      className="Button Button--isLink ProductTour__skip"
                      disabled={false}
                      onClick={[Function]}
                      type="button"
                    >
                      Cancel
                    </button>
                  </Button>
                  <Button
                    isPrimary={true}
                    onClick={[Function]}
                  >
                    <button
                      className="Button Button--isPrimary"
                      disabled={false}
                      onClick={[Function]}
                      type="button"
                    >
                      Continue
                    </button>
                  </Button>
                </div>
              </div>
            </div>
          </div>
        </ModalPortal>
      </Portal>
    </Modal>
  </Modal>
</ProductTour>
`;
